--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -23,7 +23,7 @@
 
     <!-- PLACE CARD -->
 
-    <div id="place-add-form">
+    <div id="place-add-form" class="form-container">
         <!-- Photo -->
         <div class="add-form-img-container">
             <img src="{% static 'images/no-google-photo-placeholder.png' %}" alt="Placeholder image" id="photo">
