--- a/templates/partials/js.html
+++ b/templates/partials/js.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU10F5IFW-yAo0xDkulAl5FuaoB3daVgQ&libraries=places&callback=initAutocomplete" async defer></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU10F5IFW-yAo0xDkulAl5FuaoB3daVgQ&libraries=places&callback=initAutocomplete"></script>
 
 
 
