add_gems.html(fix issue with image display)

--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -41,6 +41,7 @@
                 <input type="submit" value="Share gem" id="place-add-save-btn" class="submit-btn">
                 <a href="{% url 'home' %}" class="cancel-btn">Cancel</a>
             </div>
+            <input type="hidden" id="photoUrlField" name="photo_url">
         </form>
 
 
