base.html(tidy code, fix delete button, add comments)

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,27 @@
-{% load static %} {% url 'home' as home_url %}
+{% load static %} 
+{% url 'home' as home_url %}
 {% load i18n %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
   <head>
+    <!-- Page title -->
     <title>Scottish Gems</title>
+    <!-- Responsive meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Include CSS files -->
     {% include 'partials/css.html' %}
   </head>
   <body class="d-flex flex-column h-100 main-bg">
+
     <!-- Include navbar -->
     {% include 'partials/navbar.html' %}
+
     <!-- Include header -->
     {% include 'partials/header.html' %}
+
     <main class="flex-shrink-0 main-bg">
+      <!-- Display messages if any -->
       {% if messages %}
         <div class="messages">
           <strong>{% trans "Message:"%}</strong>
@@ -26,18 +33,28 @@
         </div>
       {% endif %}
 
+      <!-- Posts container -->
       <div class="posts-container">
         {% block content %}
         <div class="row g-3 post-row" >
+
+        <!-- Check if region is selected -->
         {% if region_selected %}
+
+          <!-- Loop through posts -->
           {% for post in posts %}
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3">
+
               <!-- Display the post -->
               <h2>{{ post.title }}</h2>
               <img src="{{ post.photo_url }}" alt="{{ post.title }}">
               <p>Author: {{ post.author.username }}</p>
               <p >Gem Info: {{post.content}}</p>
+
+              <!-- Check if user is authenticated -->
               {% if request.user.is_authenticated %}
+
+                <!-- Form for toggling favorites -->
                 <form method="post" action="{% url 'toggle_favorite' post.id %}">
                   {% csrf_token %}
                   <button type="submit" class="icon-button">
@@ -46,32 +63,38 @@
                     {% else %}
                     <i class="far fa-heart" title="Add to Favorites"></i>
                     {% endif %}
-                </button>
                   </button>
-                  <button type="submit" class="icon-button">
-                    {% if request.user == post.author %}
-                    <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-                        <i class="fas fa-eraser"></i>
-                    </a>
-                {% endif %}
                 </form>
+
+                <!-- Delete button -->
+                {% if request.user == post.author %}
+                  <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
+                      <i class="fas fa-eraser"></i>
+                  </a>
+                {% endif %}
               {% endif %}
             </div>
           {% endfor %}
         {% else %}
         <div class="row g-3 post-row  justify-content-center">
+
+          <!-- Loop through posts -->
           {% for post in posts %}
             <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
-              {{ post.title }}
+
               <!-- Display the post -->
-              <h2><a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a></h2>
+              <a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a>
               <img src="{{ post.photo_url }}" alt="{{ post.title }}">
               <p>Author: {{ post.author.username }}</p>
               <p class="gem-info">{{post.content}}</p>
               <a href="{% url 'gem_detail' post.id %}">Show More</a>
               <br>
               <p>Region: {{post.region}}</p>
+
+              <!-- Check if user is authenticated -->
               {% if request.user.is_authenticated %}
+                <div class="favorite-delete">
+                <!-- Form for toggling favorites -->
                 <form method="post" action="{% url 'toggle_favorite' post.id %}">
                   {% csrf_token %}
                   <button type="submit" class="icon-button">
@@ -80,15 +103,16 @@
                     {% else %}
                     <i class="far fa-heart" title="Add to Favorites"></i>
                     {% endif %}
-                </button>
-                  <button type="submit" class="icon-button">
-                    {% if request.user == post.author %}
-                    <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-                        <i class="fas fa-eraser"></i>
-                    </a>
-                    {% endif %}
                   </button>
                 </form>
+
+                <!-- Delete button -->
+                {% if request.user == post.author %}
+                  <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
+                      <i class="fas fa-eraser"></i>
+                  </a>
+                {% endif %}
+                </div>
               {% endif %}
             </div>
           {% endfor %}
@@ -98,10 +122,11 @@
         {% endblock content %}
       </div>
     </main>
+
     <!-- Include footer -->
     {% include 'partials/footer.html' %}
+
     <!-- Include JavaScript files -->
-    
     {% block extra_js %}
     {% include 'partials/js.html' %}
     {% endblock %}
