header.html( add comments, tidy code)

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,4 @@
+<!-- Footer element for base.html -->
 <footer class="footer mt-auto py-3 dark-bg">
     <p class="m-0 text-center text-white">Created By Jamie Connell</p>
     <p class="m-0 text-center text-white">Student of CodeInstitiue 2024</p>
