--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,38 +1,56 @@
 {% load static %}
+
+<!-- Header -->
 <header>
+
+    <!-- Carousel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-        <img src="{% static 'images/dinasaur.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="{% static 'images/highland_cow.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="{% static 'images/food_image.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-caption" style="position: relative; height: 100%;">
-            <div class="page-title">
-                <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Scottish Gems</a>
+
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+            <!-- Carousel item 1 -->
+            <div class="carousel-item active">
+                <img src="{% static 'images/dinasaur.webp' %}" class="d-block w-100" alt="...">
             </div>
-            <div class="page-sub-title">
-                <h5>Faigh a-mach fìor sheudan na h-Alba</h5>
-                <p>(Discover Scotlands true gems)</p>
+            <!-- Carousel item 2 -->
+            <div class="carousel-item">
+                <img src="{% static 'images/highland_cow.webp' %}" class="d-block w-100" alt="...">
+            </div>
+            <!-- Carousel item 3 -->
+            <div class="carousel-item">
+                <img src="{% static 'images/food_image.webp' %}" class="d-block w-100" alt="...">
+            </div>
+            <!-- Carousel caption -->
+            <div class="carousel-caption" style="position: relative; height: 100%;">
+                <!-- Page title -->
+                <div class="page-title">
+                    <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Scottish Gems</a>
+                </div>
+                
+                <!-- Page sub-title -->
+                <div class="page-sub-title">
+                    <h5>Faigh a-mach fìor sheudan na h-Alba</h5>
+                    <p>(Discover Scotlands true gems)</p>
+                </div>
             </div>
         </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+        <!-- Carousel controls -->
+        <!-- Previous slide button -->
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <!-- Next slide button -->
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </header>
