--- a/templates/partials/js.html
+++ b/templates/partials/js.html
@@ -1,21 +1,27 @@
 {% load static %}
 
-
+<!-- Load jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<!-- Load Bootstrap JS library (version 5.0.1) with Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<!-- Load Google Maps JavaScript API -->
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMOTDrjJcLNnlD18acJG3Ycg-j6ZIIPnk&libraries=places&callback=initAutocomplete"></script>
 
-
-
+<!-- Custom JavaScript -->
 <script>
-var logoutLink = document.getElementById('logout-link');
+    // Get logout link element
+    var logoutLink = document.getElementById('logout-link');
+    // Check if logout link element exists
     if (logoutLink) {
+        // Add click event listener to logout link
         logoutLink.addEventListener('click', function(e) {
+            // Confirm logout
             var confirmLogout = confirm('Are you sure you want to log out?');
-    if (!confirmLogout) {
-        e.preventDefault();
+            // If logout is not confirmed, prevent the default action (which is to follow the link)
+            if (!confirmLogout) {
+                e.preventDefault();
+            }
+        });
     }
-    });
-                    }
 </script>
