--- a/templates/gem_posts/delete_gem.html
+++ b/templates/gem_posts/delete_gem.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Delete Gem</h1>
-  <p>Are you sure you want to delete this Gem?</p>
-  <p>Other users may miss out on a fantastic experience</p>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Yes, delete my gem!</button>
-    <button type="submit"><a href="{% url 'home' %}">No, I want to keep my gem</a></button>
-  </form>
-  
+    <!-- Page title -->
+    <h1>Delete Gem</h1>
+    <!-- Confirmation message -->
+    <p>Are you sure you want to delete this Gem?</p>
+    <p>Other users may miss out on a fantastic experience</p>
+
+    <!-- Delete confirmation form -->
+    <form method="post">
+        {% csrf_token %}
+        <!-- Submit button for confirming deletion -->
+        <button type="submit">Yes, delete my gem!</button>
+        <!-- Cancel button for aborting deletion -->
+        <a href="{% url 'home' %}" class="btn">No, I want to keep my gem</a>
+    </form>
 {% endblock %}
