--- a/templates/gem_posts/delete_comment.html
+++ b/templates/gem_posts/delete_comment.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Delete Comment</h2>
-<p>Are you sure you want to delete this comment?</p>
-<p>{{ comment.comment }}</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Delete Comment</button>
-</form>
+    <!-- Page title -->
+    <h2>Delete Comment</h2>
+    <!-- Confirmation message -->
+    <p>Are you sure you want to delete this comment?</p>
+    <!-- Display the comment to be deleted -->
+    <p>{{ comment.comment }}</p>
+
+    <!-- Delete confirmation form -->
+    <form method="post">
+        {% csrf_token %}
+        <!-- Submit button for confirming deletion -->
+        <button type="submit">Delete Comment</button>
+    </form>
 {% endblock %}
