--- a/templates/accounts/favorites.html
+++ b/templates/accounts/favorites.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Favorite Posts</h1>
-  {% for post in favorite_posts %}
-    <h2>{{ post.title }}</h2>
-    {% if post.image %}
-      <img src="{{ post.image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>Author: {{ post.author.username }}</p>
-
-    <form method="post" action="{% url 'toggle_favorite' post.id %}">
-      {% csrf_token %}
-      <button type="submit">Remove from favorites</button>
-    </form>
-  {% endfor %}
+    <h1>Favorite Posts</h1>
+    <!-- Loop through favorite posts -->
+    {% for post in favorite_posts %}
+        <h2>{{ post.title }}</h2>
+        <!-- Display post image if it exists -->
+        {% if post.image %}
+            <img src="{{ post.image.url }}" alt="{{ post.title }}">
+        {% endif %}
+        <p>Author: {{ post.author.username }}</p>
+        <!-- Remove from favorites form -->
+        <form method="post" action="{% url 'toggle_favorite' post.id %}">
+            {% csrf_token %}
+            <button type="submit">Remove from favorites</button>
+        </form>
+    {% endfor %}
 {% endblock %}
