--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,31 +3,31 @@
 {% include 'partials/css.html' %}
 {% include 'partials/navbar.html' %}
 
-
 {% block content %}
-<section class="login-page">
-<div class="login-form-container">
-  <div class="login-form-title">
-    <h2 class="login-title">{% trans "Log In" %}</h2>
-    </div>
-    <div class="login-form-content">
-    <form class="login login-form" method="post" action="{% url 'account_login' %}">
-      {% csrf_token %} 
-      {{ login_form.as_p }}
-      {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-      {% endif %}
-      <button class="primaryAction btn btn--success" type="submit">{% trans "Log In" %}</button>
-    </form>
-      <h6>
-        <p class="if-no-account">Don't have an account? Then please
-          <a href="{% url 'signup' %}"><strong>sign up</strong>.</a></p>
-      </div>
-    </div>
-  
-    <span id="close-btn"><i class="fa-solid fa-chevron-left"></i></span>
-  </section>
-  
-  <script src="{% static 'js/back-btn.js' %}"></script>
-  
-  {% endblock %}
+    <!-- Log In Section -->
+    <section class="login-page">
+        <div class="login-form-container">
+            <div class="login-form-title">
+                <h2 class="login-title">{% trans "Log In" %}</h2>
+            </div>
+            <div class="login-form-content">
+                <!-- Log In Form -->
+                <form class="login login-form" method="post" action="{% url 'account_login' %}">
+                    {% csrf_token %} 
+                    <!-- Django form fields -->
+                    {{ login_form.as_p }}
+                    {% if redirect_field_value %}
+                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <!-- Log In Button -->
+                    <button class="primaryAction btn btn--success" type="submit">{% trans "Log In" %}</button>
+                </form>
+                <h6>
+                    <p class="if-no-account">Don't have an account? Then please
+                        <a href="{% url 'signup' %}"><strong>sign up</strong>.</a></p>
+                </div>
+            </div>
+            <span id="close-btn"><i class="fa-solid fa-chevron-left"></i></span>
+        </section>
+        <script src="{% static 'js/back-btn.js' %}"></script>
+{% endblock %}
