--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="form-container">
-    <div class="form-wrapper">
-        <h2>Sign Up</h2>
+    <!-- Sign Up Form Section -->
+    <section class="form-container">
+        <div class="form-wrapper">
+            <h2>Sign Up</h2>
             <div class="Signup-form-content">
+                <!-- Sign Up Form -->
                 <form class="signup signup-form" id="signup_form" method="post">
                     {% csrf_token %}
+                    <!-- Django form fields -->
                     {{ form.as_p }}
-                        <button type="submit" name="signup">Sign up</button>
-                    </form>
+                    <!-- Submit Button -->
+                    <button type="submit" name="signup">Sign up</button>
+                </form>
             </div>
 {% endblock %}
