--- a/static/css/style.css
+++ b/static/css/style.css
@@ -255,6 +255,7 @@ nav {
 .btn-edit {
     background-color: #188181;
     color: #fff;
+    width: 80%
 }
 
 .btn-signup:hover,
@@ -326,7 +327,7 @@ nav {
 /* --------- Login  Form Style ---------------*/
 
 
-.login-form-container, .log-out-confirmation-page {
+.login-form-container, .log-out-confirmation-page, .signup-form-container {
     background-color: #273c75;
     display: flex;
     flex-direction: column;
@@ -345,6 +346,16 @@ nav {
     gap: 11%;
 }
 
+.signup-form-container {
+        width: 80%;
+        text-align: center;
+}
+
+.signup-form{
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+}
 .login-title {
     font-family: Merriweither;
     font-weight: 600;
