--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <!-- Sign Up Form Section -->
-    <section class="form-container">
+    <section class="form-container signup-form-container">
         <div class="form-wrapper">
             <h2>Sign Up</h2>
             <div class="Signup-form-content">
@@ -12,7 +12,7 @@
                     <!-- Django form fields -->
                     {{ form.as_p }}
                     <!-- Submit Button -->
-                    <button type="submit" name="signup">Sign up</button>
+                    <button class="btn btn--success btn-signup" type="submit" name="signup">Sign up</button>
                 </form>
             </div>
         </div>
